[GStreamer] GstCaps are leaked when building with gstreamer-1.0 https://bugs.webkit.org/show_bug.cgi?id=99362

Patch by Arnaud Renevier <a.renevier@sisa.samsung.com> on 2012-10-15
Reviewed by Martin Robinson.

Implement GRefPtr<GstCaps> adoptGRef(GstCaps*).

Change webkitGstGetPadCaps signature to return a GRefPtr<GstCaps>, and
use GRefPtr<GstCaps> also in webkitVideoSinkRender to simply GstCaps
refeference count.

Covered by existing tests.

* platform/graphics/gstreamer/GRefPtrGStreamer.cpp:
(WTF::adoptGRef):
(WTF):
* platform/graphics/gstreamer/GRefPtrGStreamer.h:
(WTF):
* platform/graphics/gstreamer/GStreamerVersioning.cpp:
(webkitGstGetPadCaps):
* platform/graphics/gstreamer/GStreamerVersioning.h:
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::naturalSize):
* platform/graphics/gstreamer/VideoSinkGStreamer.cpp:
(webkitVideoSinkRender):

Canonical link: https://commits.webkit.org/117352@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131387 268f45cc-cd09-0410-ab3c-d52691b4dbfc